# homepage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-release.py  docker-build-push.sh  docker.sh  fly.toml  james.nginx.conf
old_release_tools/: homepage.service.sample  kominick.nginx.conf  letsencrypt.info
src/: errors.rs  logger.rs  macros.rs  main.rs  service.rs
static/: keybase.txt
static/css/: base.css  site.css
static/js/: site.js
templates/: base.html  home.html  macros.html
