[package]
name = "homepage"
version = "0.3.0"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-service = "1"
futures = "0.3.1"
anyhow = "1"

chrono = "0.4"
tera = "1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.5"

slog = "2.5"
slog-async = "2.5"
slog-term = "2.6"
slog-json = "2.3"
