[package]
name = "homepage"
version = "0.0.0"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.5"
actix-service = "1"
futures = "0.3"
anyhow = "1"

chrono = "0.4"
tera = "1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"

slog = "2"
slog-async = "2"
slog-term = "2"
slog-json = "2"
